--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@ src/testbed.py
 __pycache__/
 *.py[cod]
 *$py.class
+
+# Distribution / packaging
+dist/
+*.egg-info
+
+# Sphinx documentation
+docs/_build/
